--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,36 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
+        distribution: 'adopt' # or 'zulu', 'temurin', etc.
         java-version: '11'
 
-    - name: Cache SBT dependencies
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.ivy2/cache
-          ~/.sbt
-        key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
-        restore-keys: |
-          ${{ runner.os }}-sbt-
-
-    - name: Set up Scala
-      uses: olafurpg/setup-scala@v10
-      with:
-        java-version: '11'
-        scala-version: '2.13.6'
-
-    - name: Build project
-      run: sbt compile
-
-    - name: Test project
-      run: sbt test
-
-    - name: Publish to GitHub Pages
-      if: github.ref == 'refs/heads/main'
-      run: sbt ghpagesPushSite
+    - name: Build with Gradle
+      run: ./gradlew build
